Fix errors caught by linting

--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -19,7 +19,7 @@
 			by<br/>
 			<a href="https://github.com/erinendrei">Erin Endrei</a>,<br/>
 			and is based on a transcription produced in 2007 by<br/>
-			<b epub:type="z3998:personal-name">Anonymous</b><br/>
+			<b>An Anonymous Volunteer</b><br/>
 			for<br/>
 			<a href="https://gutenberg.net.au/ebooks07/0700221h.html">Project Gutenberg Australia</a><br/>
 			and on digital scans from the<br/>
