--- a/src/epub/text/dedication.xhtml
+++ b/src/epub/text/dedication.xhtml
@@ -7,7 +7,7 @@
 	</head>
 	<body epub:type="frontmatter z3998:non-fiction">
 		<section id="dedication" epub:type="dedication">
-			<p>To Bethel Solomons, M.B.</p>
+			<p>To Bethel Solomons, <abbr class="eoc" epub:type="z3998:initialism">M.B.</abbr></p>
 		</section>
 	</body>
 </html>
