--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -15,13 +15,13 @@
 			was published in 1912 by<br/>
 			<a href="https://en.wikipedia.org/wiki/James_Stephens_(author)">James Stephens</a>.</p>
 			<p>This ebook was produced for<br/>
-			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
+			<a href="https://standardebooks.org/">Standard Ebooks</a><br/>
 			by<br/>
 			<a href="https://github.com/erinendrei">Erin Endrei</a>,<br/>
 			and is based on a transcription produced in 2007 by<br/>
 			<b>An Anonymous Volunteer</b><br/>
 			for<br/>
-			<a href="https://gutenberg.net.au/ebooks07/0700221h.html">Project Gutenberg Australia</a><br/>
+			<a href="https://www.gutenberg.net.au/ebooks07/0700221h.html">Project Gutenberg Australia</a><br/>
 			and on digital scans from the<br/>
 			<a href="https://archive.org/details/charwomansdaught01step">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
@@ -31,12 +31,12 @@
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
-			<a href="https://www.theleagueofmoveabletype.com">The League of Moveable Type</a>.</p>
+			<a href="https://www.theleagueofmoveabletype.com/">The League of Moveable Type</a>.</p>
 			<p>The first edition of this ebook was released on<br/>
 			<b>August 26, 2023, 2:42 <abbr class="eoc">p.m.</abbr></b><br/>
 			You can check for updates to this ebook, view its revision history, or download it for different ereading systems at<br/>
 			<a href="https://standardebooks.org/ebooks/james-stephens/mary-mary">standardebooks.org/ebooks/james-stephens/mary-mary</a>.</p>
-			<p>The volunteer-driven Standard Ebooks project relies on readers like you to submit typos, corrections, and other improvements. Anyone can contribute at <a href="https://standardebooks.org">standardebooks.org</a>.</p>
+			<p>The volunteer-driven Standard Ebooks project relies on readers like you to submit typos, corrections, and other improvements. Anyone can contribute at <a href="https://standardebooks.org/">standardebooks.org</a>.</p>
 		</section>
 	</body>
 </html>
